HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/RefinementStaticProofFailure/Expected.uv
//! Expected diagnostic metadata for the RefinementStaticProofFailure rejected-source specimen.

expectedDiagnostic("E-TYP-1953", "rule.14.T-Refine-Intro")
